Done read data from ChiassoTV APIs

--- a/player.html
+++ b/player.html
@@ -11,6 +11,21 @@
     <meta name="application-name" content="ChiassoTV Display"/>
 </head>
 <body>
+    <!-- Player container -->
+    <div id="player"></div>
 
 </body>
+
+<!-- Load JQuery -->
+<script src="/assets/js/common/jquery-3.4.1.min.js"></script>
+
+<!-- Load Youtube IFrame APIs -->
+<script src="https://www.youtube.com/iframe_api"></script>
+
+<!-- Load fetcher (loads also the config file) -->
+<script src="/assets/js/common/fetcher.js"></script>
+
+<!-- Load video manager -->
+<script src="/assets/js/pages/video_manager.js"></script>
+
 </html>
