--- a/player.html
+++ b/player.html
@@ -9,15 +9,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="application-name" content="ChiassoTV Display"/>
+
+    <!-- Load bootstrap core CSS -->
+    <link href="assets/css/common/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Load personal css -->
+    <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Player container -->
-    <div id="player"></div>
-
+<div id="player" style="height: 100vh !important; width: 100% !important;"></div>
+<!-- Player container -->
+</div>
 </body>
 
 <!-- Load JQuery -->
 <script src="/assets/js/common/jquery-3.4.1.min.js"></script>
+
+<!-- Load bootstrap core JS -->
+<script src="/assets/js/common/bootstrap.min.js"></script>
 
 <!-- Load Youtube IFrame APIs -->
 <script src="https://www.youtube.com/iframe_api"></script>
